--- a/templates/cgpa.html
+++ b/templates/cgpa.html
@@ -130,7 +130,7 @@
     <nav class="navbar">
         <p class="easy">Easy College</p>
         <div class="navbar-links">
-            <a href="#">Contact</a>
+            <a href="https://mail.google.com/mail/u/0/?view=cm&to=yohtachy@gmail.com&su=Contact%20from%20Easy%20College&body=Hello,%0D%0A%0D%0AI'm%20contacting%20you%20regarding%20Easy%20College.%0D%0A%0D%0ARegards,%0D%0A[Your%20Name]" target="_blank">Contact</a>
             <a href="{{ url_for('about') }}">About</a>
             <a href="{{ url_for('logout') }}">Logout</a>
         </div>
