--- a/templates/login.html
+++ b/templates/login.html
@@ -18,7 +18,7 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            background: url('../static/images/background.jpeg') center center/cover;
+            background: url("{{ url_for('static', filename='images/background.jpeg') }}") center center/cover;
             background-size: cover;
             padding: 20px;
         }
