--- a/templates/about.html
+++ b/templates/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Easy College</title>
+    <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
     <style>
         /* From Uiverse.io by ProgramaConPid */ 
         /* Card Styles */
