--- a/templates/loading.html
+++ b/templates/loading.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Form</title>
+    <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
+
     <style>
         * {
             box-sizing: border-box;
