--- a/templates/pages.html
+++ b/templates/pages.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Pages</title>
+<link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
 <style>
     /* Navbar styles */
     
