--- a/templates/pages.html
+++ b/templates/pages.html
@@ -15,7 +15,7 @@
         justify-content: center;
         align-items: center;
         height: 100vh;
-        background: url('../static/images/background.jpeg') no-repeat center center fixed;
+        background: url("{{ url_for('static', filename='images/background.jpeg') }}") center center/cover;
         background-size: cover;
         font-family: Arial, sans-serif;
         color: white;
