--- a/templates/about.html
+++ b/templates/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Easy College</title>
-    <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="static/favicon.ico">
     <style>
         /* From Uiverse.io by ProgramaConPid */ 
         /* Card Styles */
@@ -162,7 +162,7 @@
         }
 
         body {
-            background: url("{{ url_for('static', filename='images/background.jpeg') }}") center center/cover;
+            background: url("{{ url_for('static', filename='background.jpeg') }}") center center/cover;
             background-size: cover;
             min-height: 100vh;
             color: white;
