--- a/templates/loading.html
+++ b/templates/loading.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Form</title>
-    <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="static/favicon.ico">
 
     <style>
         * {
@@ -19,7 +19,7 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            background: url("{{ url_for('static', filename='images/background.jpeg') }}") center center/cover;
+            background: url("{{ url_for('static', filename='background.jpeg') }}") center center/cover;
             background-size: cover;
             padding: 20px;
         }
