changed it back

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,4 @@
 <!-- login.html -->
-import imgbackground from './static/background.jpeg'
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -21,7 +20,7 @@ import imgbackground from './static/background.jpeg'
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            background: src={imgbackground} center center/cover;
+            background: url("{{ url_for('static', filename='background.jpeg') }}") center center/cover;
             background-size: cover;
             padding: 20px;
         }
