--- a/templates/about.html
+++ b/templates/about.html
@@ -162,7 +162,7 @@
         }
 
         body {
-            background: url("{{ url_for('static', filename='background.jpeg') }}") center center/cover;
+            background: black;
             background-size: cover;
             min-height: 100vh;
             color: white;
