--- a/templates/loading.html
+++ b/templates/loading.html
@@ -19,7 +19,7 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            background: url("{{ url_for('static', filename='background.jpeg') }}") center center/cover;
+            background: black;
             background-size: cover;
             padding: 20px;
         }
