--- a/templates/about.html
+++ b/templates/about.html
@@ -162,7 +162,7 @@
         }
 
         body {
-            background: black;
+            background: rgba(0, 0, 0, 0.911);
             background-size: cover;
             min-height: 100vh;
             color: white;
