--- a/templates/pages.html
+++ b/templates/pages.html
@@ -15,7 +15,7 @@
         justify-content: center;
         align-items: center;
         height: 100vh;
-        background: #0b0705;
+        background: rgba(0, 0, 0, 0.911);
         background-size: cover;
         font-family: Arial, sans-serif;
         color: white;
