--- a/templates/pages.html
+++ b/templates/pages.html
@@ -8,7 +8,7 @@
 <style>
     /* Navbar styles */
     
-    body, html {
+    body {
         margin: 0;
         padding: 0;
         display: flex;
