--- a/templates/cgpa.html
+++ b/templates/cgpa.html
@@ -45,7 +45,7 @@
         }
 
         .navbar-links a {
-            color: white;
+            color: pink;
             text-decoration: none;
             font-size: 16px;
             padding: 5px 10px;
