--- a/templates/login.html
+++ b/templates/login.html
@@ -46,7 +46,7 @@
         }
 
         .navbar-links a {
-            color: white;
+            color: pink;
             text-decoration: none;
             font-size: 16px;
             padding: 5px 10px;
