--- a/templates/pages.html
+++ b/templates/pages.html
@@ -118,7 +118,7 @@
     }
 
     .navbar-links a {
-        color: white;
+        color: pink;
         text-decoration: none;
         margin-left: 20px;
         font-size: 16px;
