changed footer link color to pink

--- a/templates/attendance.html
+++ b/templates/attendance.html
@@ -111,7 +111,7 @@
 
         footer .developer a {
             font-size: 17px;
-            color: #ffcc00;
+            color: pink;
             text-decoration: none;
         }
 
