--- a/templates/login.html
+++ b/templates/login.html
@@ -46,7 +46,7 @@
         }
 
         .navbar-links a {
-            color: pink;
+            color: white;
             text-decoration: none;
             font-size: 16px;
             padding: 5px 10px;
@@ -111,15 +111,42 @@
             transform: translateY(-2px);
         }
 
-        footer {
+        footer { 
             text-align: center;
             padding: 10px 20px;
             color: white;
-            background-color: rgba(0, 0, 0, 0.5);
-            position: fixed;
+            font-family: 'Courier New', Courier, monospace;
+            background-color: transparent;
+            font-size: 14px;
+            flex-shrink: 0;
+            position: relative;
             bottom: 0;
             width: 100%;
         }
+
+        footer p {
+            margin: 5px 0;
+            padding: 0;
+        } 
+        footer .development-text {
+        font-size: 16px;
+        font-weight: bold;
+    }
+
+    footer .developer a {
+        color: pink;
+        text-decoration: none;
+    }
+
+    footer .developer a:hover {
+        text-decoration: underline;
+    }
+        .easy {
+        font-size: 24px;
+        color: white;
+        text-decoration: none;
+        font-weight: bold;
+    }
 
         @media (max-width: 600px) {
             .navbar {
