--- a/templates/about.html
+++ b/templates/about.html
@@ -193,7 +193,7 @@
         }
 
         .navbar-links a {
-            color: pink;
+            color: white;
             text-decoration: none;
             margin-left: 20px;
             font-size: 16px;
