mobile view almost done

--- a/templates/cgpa.html
+++ b/templates/cgpa.html
@@ -136,21 +136,27 @@
         font-weight: bold;
     }
 
-        @media (max-width: 600px) {
+    @media (max-width: 600px) {
             .navbar {
                 padding: 10px;
-                flex-direction: column;
-                gap: 10px;
+                flex-direction: row;
+                gap: 15px;
+                
             }
 
             .navbar-links {
-                width: 100%;
+                width: 58%;
                 justify-content: center;
             }
 
-            .cgpa-container {
+            .login-container {
                 padding: 1.5rem;
                 margin: 100px 10px 20px 10px;
+            }
+
+            .login-btn {
+                font-size: 16px;
+                padding: 10px 20px;
             }
         }
     </style>
