--- a/templates/login.html
+++ b/templates/login.html
@@ -150,12 +150,13 @@
         @media (max-width: 600px) {
             .navbar {
                 padding: 10px;
-                flex-direction: column;
-                gap: 10px;
+                flex-direction: row;
+                gap: 15px;
+                
             }
 
             .navbar-links {
-                width: 100%;
+                width: 58%;
                 justify-content: center;
             }
 
