--- a/templates/about.html
+++ b/templates/about.html
@@ -285,6 +285,29 @@
         text-decoration: none;
         font-weight: bold;
     }
+    @media (max-width: 600px) {
+            .navbar {
+                padding: 10px;
+                flex-direction: row;
+                gap: 15px;
+                
+            }
+
+            .navbar-links {
+                width: 58%;
+                justify-content: center;
+            }
+
+            .login-container {
+                padding: 1.5rem;
+                margin: 100px 10px 20px 10px;
+            }
+
+            .login-btn {
+                font-size: 16px;
+                padding: 10px 20px;
+            }
+        }
         </style>
 </head>
 <body>
