--- a/templates/login.html
+++ b/templates/login.html
@@ -21,7 +21,7 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            background: black center center/cover;
+            background: rgba(0, 0, 0, 0.911);
             background-size: cover;
             padding: 20px;
         }
